# healthcare-voc-compliance

./: .gitignore  .npmignore  Dockerfile  LICENSE  LIVE_URLS.md  README-facility-managers.md  README.md  TODO.md  composer.json  package.json  pyproject.toml
datasets/: generate_product_matrix.py  generate_regulatory_limits.py  healthcare_cleaning_products_voc.csv  voc_regulatory_limits.csv
docs/: conf.py  index.rst  requirements.txt
engines/elixir/: mix.exs
engines/elixir/doc/: .build  .build.epub  .build.markdown  404.html  HealthcareVoc.html  HealthcareVoc.md  api-reference.html  api-reference.md  healthcare_voc.epub  index.html  llms.txt  search.html
engines/elixir/lib/: healthcare_voc.ex
engines/go/: go.mod  main.go
engines/java/: pom.xml
engines/java/src/main/java/io/github/davecookvectorlabs/voc/: VOCCalculator.java
engines/nostr/: publish.py
engines/php/src/: VOCCalculator.php
engines/python/: engine.py
engines/ruby/: healthcare_voc_compliance-0.1.0.gem  healthcare_voc_compliance.gemspec
engines/ruby/lib/: healthcare_voc_compliance.rb
engines/rust/: Cargo.toml
engines/rust/src/: main.rs
kaggle/: kernel-metadata.json
notebooks/: voc_compliance_analysis.ipynb
observable/: voc-calculator.md
pdfs/: generate_pdfs.py
public/: calculate.php  index.php
