[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-voc-compliance"
version = "0.1.0"
description = "Healthcare VOC compliance calculator — computes VOC exposure, OSHA PEL comparison, and multi-jurisdiction regulatory compliance for cleaning products used in healthcare facilities."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dave Cook", email = "dave@binx.ca"},
]
keywords = [
    "voc",
    "healthcare",
    "compliance",
    "cleaning",
    "osha",
    "facility-management",
    "regulatory",
    "epa",
    "carb",
    "infection-prevention",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/DaveCookVectorLabs/healthcare-voc-compliance"
Documentation = "https://healthcare-voc-compliance.readthedocs.io/"
Repository = "https://github.com/DaveCookVectorLabs/healthcare-voc-compliance"
"Bug Tracker" = "https://github.com/DaveCookVectorLabs/healthcare-voc-compliance/issues"
"Binx Professional Cleaning" = "https://www.binx.ca/commercial.php"

[tool.setuptools.packages.find]
where = ["engines/python"]
